# planwise_navigator

./: .gitattributes  .gitignore  .graphifyignore  .pre-commit-config.yaml  .sqlfluff  AGENTS.md  CALENDAR_DRIVEN_COST_IMPLEMENTATION.md  CHANGELOG.md  CHECKLIST_VALIDATION_FIX.md  CLAUDE.md  COORDINATION_BENCHMARK_IMPLEMENTATION.md  COST_ESTIMATE.md  COST_MODELING_ANALYSIS_EVENT_CALENDAR.md  DETERMINISM_FIX_SUMMARY.md  E067_VALIDATION_REPORT.md  E068F_IMPLEMENTATION_SUMMARY.md  ENROLLMENT_EVENTS_ANALYSIS.md  HANDOVER.md  HARDENING_WEEK_PLAN.md  Jenkinsfile.e068h  LEGAL_DOCUMENTATION.md  METHODOLOGY.md  Makefile  Makefile.benchmarking  OPTIMIZATION_SCHEMA_IMPLEMENTATION.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  README.md  ROLLBACK_PLAN.md  SECURITY.md  TROUBLESHOOTING_WORK_MACHINE.md  VALIDATION_SUMMARY.md  _version.py  benchmark_config.example.yaml  benchmark_real_performance.py  check_db.py  check_dbt_db.py  check_deferral_fix.py  check_emp_2024_000001.py  check_event_timeline.py  check_hire_calculation.py  (+87 more)
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.navigator_checkpoints/: year_2025.json  year_2026.json  year_2027.json  year_2028.json  year_2029.json
benchmark_baselines/: census_enrollment_projection_sql_baseline.json
config/: __init__.py  constants.py  corporate_network_template.yaml  erisa_compliance.py  events.py  example_model_parallelization_config.yaml  hybrid_simulation_config.yaml  network_config.py  orchestration_config.yaml  policy_test_scenarios.yaml  policy_test_scenarios_revised.yaml  schema.py  simulation_config.yaml  simulation_config.yaml.bak  simulation_config_with_resource_management.yaml  storage_config.yaml  test_config.yaml  test_scenarios_e058.yaml
data/: CENSUS_COMPARISON.md  census_preprocessed copy.parquet  census_preprocessed.parquet  census_preprocessed_OLD_backup_20251007_191811.parquet
dbt/: .user.yml  CLAUDE.md  dbt_packages  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml  year_processor_performance.json
docs/: 01_prd_planwise_navigator_v3_0.md  01_prd_planwise_navigator_v3_1.md  02_logic_documentation.md  03_technical_implementation_guide.md  04_dagster_patterns.md  05_duckdb_dagster_patterns.md  06_rebuild_implementation_addendum.md  07_dbt.md  2024-06-22-update-notes.md  2024-06-24-workforce-simulation-fixes.md  99_file_tree.md  BUSINESS_OVERVIEW.md  DATA_MODEL.md  E068G_HYBRID_PIPELINE_IMPLEMENTATION.md  E068H_PARITY_TESTING_IMPLEMENTATION_SUMMARY.md  E076_S076_06_BENCHMARK_RESULTS.md  E079_PERFORMANCE_RESULTS.md  E079_PHASE2_SQL_OPTIMIZATION_SUMMARY.md  E079_PHASE_1A_SUMMARY.md  E079_VALIDATION_QUERIES.sql  E080_PHASE1_INVENTORY.md  E080_PHASE5_TEST_RESULTS.md  E080_TEST_RESULTS.md  E081_fastapi_backend.md  EPIC_STATUS_SUMMARY.md  MIGRATION_GUIDE_S038.md  PATENTABILITY.md  PLANALIGN_STUDIO_UX_SPECIFICATION.md  POLARS_EVENTS_INTEGRATION.md  RACI.md  README.md  S025-02-Integration-Complete.md  S031-04-database-locking-fix-usage-guide.md  S031-04_USAGE_GUIDE.md  S055-business-requirements-realistic-raise-timing.md  S055-implementation-roadmap-S056-S057.md  S055-raise-timing-audit-findings.md  S056-backward-compatibility-design.md  S056-comprehensive-technical-design-specification.md  S056-migration-strategy.md  (+73 more)
examples/: optimization_schema_integration.py
issues/: 2025-08-20_voluntary_pre_ae_enrollment_path.md  2025-08-26_fct_workforce_snapshot_transaction_conflict.md
navigator_orchestrator/: README.md  __init__.py  adaptive_memory_manager.py  backup_manager.py  checkpoint_manager.py  cli.py  config.py  dbt_runner.py  debug_utils.py  error_catalog.py  excel_exporter.py  factory.py  hazard_cache_manager.py  hybrid_performance_monitor.py  init_database.py  logger.py  migration.py  model_dependency_analyzer.py  model_execution_types.py  network_utils.py  observability.py  performance_monitor.py  pipeline.py  pipeline_orchestrator.py  polars_event_factory.py  polars_integration.py  polars_state_pipeline.py  recovery_manager.py  recovery_orchestrator.py  registries.py  reports.py  resource_manager.py  run_summary.py  scenario_batch_runner.py  setup_database.py  test_init.py  utils.py  validation.py
orchestrator/: __init__.py  assets.py  connect_db.py  ingest_data.py  repository.py  s050_assets.py  simulator_pipeline.py
orchestrator_dbt/: CLAUDE.md  MULTI_YEAR_VALIDATION_FRAMEWORK.md  README.md  README_OPTIMIZATIONS.md  S031-02-implementation-summary.md  S031_02_VALIDATION_DELIVERABLES.md  TESTING_VALIDATION_README.md  __init__.py  run_foundation.py  run_multi_year.py  run_optimized_orchestrator.py  run_orchestrator_legacy.py  run_s031_02_validation.py  run_staging.py  test_optimizations.py  test_s031_02_integration.py  test_s031_02_optimizations.py  test_setup.py  test_workforce_needs_integration.py  workflow_orchestrator.py
orchestrator_mvp/: CLAUDE.md  README.md  __init__.py  run_multi_year.py  run_mvp.py  run_single_year.py
planalign_api/: __init__.py  auth.py  config.py  constants.py  main.py  run.py
planalign_cli/: __init__.py  main.py
planalign_core/: __init__.py  constants.py  schema.py
planalign_orchestrator/: README.md  __init__.py  adaptive_memory_manager.py  backup_manager.py  calibration_optimizer.py  calibration_runner.py  change_validation.py  checkpoint_manager.py  cli.py  config.py  dbt_runner.py  debug_utils.py  error_catalog.py  excel_exporter.py  exceptions.py  factory.py  hazard_cache_manager.py  init_database.py  logger.py  migration.py  model_dependency_analyzer.py  model_execution_types.py  monitoring.py  network_utils.py  observability.py  orchestrator_setup.py  parallel_execution_engine.py  performance_monitor.py  pipeline_orchestrator.py  polars_event_factory.py  polars_integration.py  polars_state_pipeline.py  recovery_manager.py  registries.py  resource_manager.py  run_execution_metadata.py  run_metadata.py  run_summary.py  scenario_batch_runner.py  setup_database.py  (+7 more)
planalign_studio/: App.tsx  README.md  constants.ts  index.css  index.html  metadata.json  package.json  tsconfig.json  types.ts  vite.config.ts
src/: __init__.py  (+2 more)
(+2591 files in other folders)
